<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LifeCounter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="plus_symbol">+</string>
    <string name="minus_symbol">-</string>
    <string name="default_life">20</string>
    <string name="player_count_settings">Player Count</string>
    <string name="round_timer_default">50:00</string>
    <string name="default_life_settings">Default Life</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="new_game">Reset Game</string>
    <string name="general_damage_title">Commander Damage Taken By:</string>
    <string name="zero">0</string>
    <string name="commander_damage_activity">Commander Damage</string>
        
</resources>
